Fix mobile blue flash issue with overflow-x hidden

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,7 @@ select {
     font-size: 87.5%; 
   }
 }
+section, div {
+  max-width: 100%;
+  overflow-x: hidden;
+}
